# pytorch_tutorials

./: pyproject.toml
section00_python_basics/: Tutorial3_Numpy.ipynb
section01_numpy_ml/notebooks/: Averaged_Perceptron.ipynb  Linear_Regression_For_Classification.ipynb
section01_numpy_ml/solutions/: Averaged_Perceptron_Solutions.ipynb
section02_pytorch_basics/notebooks/: Pytorch1_KMeans.ipynb  Pytorch2_Linear_Logistic_Regression_For_Classification.ipynb  Tutorial1_Pytorch_Basics.ipynb  load.py
section02_pytorch_basics/solutions/: Pytorch1_KMeans_Solution.ipynb  Pytorch2_Linear_Logistic_Regression_For_Classification_Solution.ipynb
section03_pytorch_mlp/notebooks/: Pytorch0_Activation_Functions.ipynb  Pytorch1_MLP_Function_Approximation.ipynb  Pytorch2_MLP_MNIST_Classification.ipynb
section03_pytorch_mlp/solutions/: Pytorch2_MLP_MNIST_Classification_Solution.ipynb
