[project]
name = "pytorch-tutorials"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "isort>=7.0.0",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "ruff>=0.14.10",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
